WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279044
css-view-transitions/navigation/pageswap-long-delay.html fails
https://bugs.webkit.org/show_bug.cgi?id=279044
Summary
css-view-transitions/navigation/pageswap-long-delay.html fails
Matt Woodrow
Reported
2024-09-02 20:13:58 PDT
https://github.com/w3c/csswg-drafts/pull/10817
There should be a timeout, starting from before the page swap event is fired.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-02 20:14:08 PDT
<
rdar://problem/135166838
>
Matt Woodrow
Comment 2
2024-09-02 20:16:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33050
EWS
Comment 3
2024-09-03 14:31:25 PDT
Committed
283113@main
(26b711588468): <
https://commits.webkit.org/283113@main
> Reviewed commits have been landed. Closing PR #33050 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug