css-view-transitions/navigation/pageswap-long-delay.html fails. https://bugs.webkit.org/show_bug.cgi?id=279044 <rdar://135166838>

Reviewed by Tim Nguyen.

https://github.com/w3c/csswg-drafts/pull/10817

There should be a timeout, starting from before the page swap event is fired.

This implements half of the resolution, making sure we don't provide a view
transition to pagereveal if it takes too long.

* LayoutTests/TestExpectations:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::dispatchPageswapEvent):
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::ViewTransition::resolveInboundCrossDocumentViewTransition):
* Source/WebCore/dom/ViewTransition.h:

Canonical link: https://commits.webkit.org/283113@main